tests/reference/asr-write_err_unsupported_01-505e227.stderr
semantic error: `err` is only supported for READ statements
 --> tests/errors/write_err_unsupported_01.f90:6:5
  |
6 |     write (*, err=10) x
  |     ^^^^^^^^^^^^^^^^^^^ 
